# legal-contract-intelligence-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run_pipeline.py
agents/: enrichment_agent.py  redline_agent.py  risk_analysis_agent.py
core/: audit_trail.py  models.py  pipeline.py
data/: sample_contracts.json
docs/: PRD.md  responsible-ai-checklist.md
