[project]
name = "legal-contract-intelligence-agent"
version = "1.0.0"
description = "Multi-agent contract risk triage and redline drafting system for transactional legal review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.urls]
Repository = "https://github.com/basavarajshepur-lab/legal-contract-intelligence-agent"
